레시피탭에 리사이클러뷰 추가 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
-
+        <activity android:name=".KoreaActivity"/>
+        <activity android:name=".ChinaActivity"/>
+        <activity android:name=".JapanActivity"/>
+        <activity android:name=".WesternActivity"/>
+        <activity android:name=".EtcActivity"/>
     </application>
 
 </manifest>
