--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileAppProgrammingProject"
         tools:targetApi="31">
-        <activity android:name=".TitleActivity" android:theme="@style/SplashTheme"
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA69HtwFOMnxvYMICMk6vQIofd2vMYgsFY" />
+        <activity android:name=".TitleActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
 
             <intent-filter>
@@ -19,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
